--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/classic/classic",
     "pages/book/book",
-    "pages/my/my"
+    "pages/my/my",
+    "pages/book-detail/book-detail"
   ],
   "window": {
     "navigationBarBackgroundColor": "#7a7ae6",
@@ -22,12 +23,14 @@
         "pagePath": "pages/classic/classic",
         "iconPath": "/images/tab/classic.png",
         "selectedIconPath": "/images/tab/classic@highlight.png"
-      }, {
+      },
+      {
         "text": "书籍",
         "pagePath": "pages/book/book",
         "iconPath": "/images/tab/book.png",
         "selectedIconPath": "/images/tab/book@highlight.png"
-      }, {
+      },
+      {
         "text": "我的",
         "pagePath": "pages/my/my",
         "iconPath": "/images/tab/my.png",
